--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@fastify/static": "^6.10.1",
     "@fastify/websocket": "^7.2.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0"
   },
   "devDependencies": {
